# ready-to-use-repository-pattern-fastapi-sqlalchemy-poetry-alembic

./: .env-dev  cookiecutter.json  create_entities.py  main.py  pyproject.toml
alembic/: env.py
tests/: conftest.py
{{cookiecutter.module_name}}/: create_entities.py  init.sh
{{cookiecutter.module_name}}/src/: .env-dev  create_entities.py  main.py
{{cookiecutter.module_name}}/src/alembic/: env.py
{{cookiecutter.module_name}}/src/code_schemas/: service.txt
{{cookiecutter.module_name}}/src/config/: config.py
{{cookiecutter.module_name}}/src/database/: base.py
{{cookiecutter.module_name}}/src/templates/: router.txt  router_connect.txt  router_import.txt  schema.txt  test_service.txt
{{cookiecutter.module_name}}/templates/: model.txt  repository.txt  router.txt  service.txt  test_repository.txt  test_service.txt
{{cookiecutter.module_name}}/tests/: conftest.py
